fix bug responsive for footer on mobile

--- a/src/main/webapp/assets/sass/z-responsive-candidate.sass
+++ b/src/main/webapp/assets/sass/z-responsive-candidate.sass
@@ -347,15 +347,12 @@
   .windows8
     left: 38%
   .js-footer
-    footer
-      padding: 5px
-      height: 35px
-    footer .copyright-block p
+    .copyright-block p
       font-size: 10px
       text-align: center
-    footer .copyright-block
+    .copyright-block
       width: 100%
-    footer .copyright-block p.address
+    .copyright-block p.address
       display: none
     .social-network-block
       display: none
